# backend/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.1].define(version: 2026_06_28_135236) do
+ActiveRecord::Schema[8.1].define(version: 2026_06_29_134823) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -30,6 +30,18 @@ ActiveRecord::Schema[8.1].define(version: 2026_06_28_135236) do
     t.index ["jti"], name: "index_jwt_denylists_on_jti"
   end
 
+  create_table "news", force: :cascade do |t|
+    t.datetime "created_at", null: false
+    t.datetime "published_at"
+    t.string "tag"
+    t.text "text"
+    t.string "title"
+    t.datetime "updated_at", null: false
+    t.string "url"
+    t.bigint "user_id", null: false
+    t.index ["user_id"], name: "index_news_on_user_id"
+  end
+
   create_table "users", force: :cascade do |t|
     t.datetime "created_at", null: false
     t.string "display_name", null: false
@@ -45,4 +57,5 @@ ActiveRecord::Schema[8.1].define(version: 2026_06_28_135236) do
   end
 
   add_foreign_key "interests", "users"
+  add_foreign_key "news", "users"
 end
